--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -6,11 +6,8 @@
     text-decoration: none;
 }
 
-body{
-    background-color: rgba(0, 89, 255, 0.425);
-}
 
-.header-container{
+.header-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     background-color: white;
@@ -27,46 +24,46 @@ body{
     width: 80px;
 }
 
-.logo{
+.logo {
     grid-column: 1/2;
     padding-left: 20px;
 }
 
-.margin{
+.margin {
     margin-right: 8px;
 }
 
-.links a{
+.links a {
     color: rgb(1, 47, 100);
     font-size: 14px;
     font-weight: bold;
 }
 
-.bolsas{
+.bolsas {
     width: 160px;
     margin-left: -10px;
 }
 
-.unidades{
+.unidades {
     width: 90px;
 }
 
-.empresas{
+.empresas {
     width: 120px;
 }
 
-.fa-magnifying-glass{
+.fa-magnifying-glass {
     margin-right: 5px;
 }
 
-.search-text{
+.search-text {
     font-size: 14px;
     color: gray;
     font-weight: bold;
     width: 80px;
 }
 
-.login-btn{
+.login-btn {
     background-color: rgb(0, 110, 255);
     color: white;
     border: 1px solid black;
@@ -83,24 +80,24 @@ body{
     font-weight: bold;
 }
 
-.main-container{
+.main-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr .45fr;
+    grid-template-rows: 1fr .5fr .7fr;
 }
 
-.gif{
+.gif {
     background-image: url("https://eventos.sp.senac.br/wp-content/uploads/2024/08/cover-evento-casa-aberta-senac-2024.webp");
     grid-column: 1/-1;
     width: 100%;
     height: 560px;
 }
 
-.text-main{
+.text-main {
     margin-left: 350px;
 }
 
-.filter{
+.filter {
     background-color: rgba(0, 0, 0, 0.39);
     color: white;
     width: 100%;
@@ -112,15 +109,16 @@ body{
     flex-wrap: wrap;
 }
 
-.alternate-title{
+.alternate-title {
     font-size: 50px;
+    color: white;
 }
 
-.subtitle{
+.subtitle {
     font-size: 20px;
 }
 
-.main-search{
+.main-search {
     margin: 0 auto;
     border: 2px solid white;
     border-radius: 5px;
@@ -132,7 +130,7 @@ body{
     color: white;
 }
 
-.main-search input{
+.main-search input {
     background-color: rgba(0, 0, 0, 0);
     border: none;
     font-size: 20px;
@@ -142,13 +140,66 @@ body{
     color: white;
 }
 
-input::placeholder{
+input::placeholder {
     color: white;
 }
 
-.cursos{
+.cursos {
     grid-column: 1/-1;
     grid-row: 2/3;
     background-color: white;
     text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding-bottom: 20px;
+}
+
+h2 {
+    font-size: 38px;
+    color: rgb(120, 122, 138);
+}
+
+.cursos-title {
+    margin: 40px 0 20px;
+}
+
+.card-group {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.card {
+    padding: 10px 20px;
+    background-color: rgb(209, 133, 33);
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+}
+
+.fast-access {
+    grid-column: 1/-1;
+    grid-row: 3/4;
+    background-color: rgba(120, 122, 138, 0.295);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.fast-access-cards {
+    background-color: rgb(244, 249, 253);
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    display: flex;
+    font-size: 20px;
 }
