--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     text-decoration: none;
 }
 
@@ -235,10 +235,6 @@ h2 {
     padding: 40px;
 }
 
-.subtitle-card-explore {
-    font-weight: 100;
-}
-
 .logo-explore {
     width: 60px;
     height: 60px;
@@ -257,15 +253,30 @@ h2 {
     background-image: url(./img/Explore-Po¿s-graduac¿a¿o.jpg);
 }
 
+.up-content {
+    display: flex;
+    align-items: center;
+    margin-top: -30px;
+}
+
+.try {
+    padding-left: 20px;
+}
+
 .title-card-explore {
-    font-size: 25px;   
+    font-size: 20px;
+}
+
+
+.subtitle-card-explore {
+    font-weight: 100;
 }
 
 .down-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    margin-bottom: -50px;
 }
 
 .main-title-card {
@@ -281,6 +292,7 @@ h2 {
     border-radius: 5px;
     font-size: 16px;
     font-weight: bold;
+    margin-top: -30px;
 }
 
 .footer{
