--- a/newStyle.css
+++ b/newStyle.css
@@ -17,7 +17,7 @@
     width: 85px;
 }
 
-.links a, .fa-brands {
+.links a{
     color: rgb(1, 47, 100);
     font-size: 14px;
     font-weight: bold;
@@ -260,67 +260,40 @@ h2 {
     font-weight: bold;
 }
 
+.footer-bg {
+    background-color: rgb(0, 48, 104);
+}
+
 .footer {
-    background-color: rgb(3, 70, 146);
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 0 350px;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 0.3fr .5fr 0.5fr;
+}
+
+.all-links {
+    justify-content: space-between;
+    padding-top: 5rem;
 }
 
 .logo-footer {
-    margin: 50px 0;
-    grid-row: 1/3;
+    margin: 3rem 0;
 }
 
-.links-footer {
+.footer-title {
+    color: rgb(180, 180, 180);
+}
+
+.footer-content li {
+    font-weight: bold;
+    margin-top: 0.7rem;
+}
+
+.column {
     display: flex;
-    gap: 50px;
-    margin: 50px 80px;
-    grid-row: 1/5;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-.list {
-    width: 80px;
-}
-
-.list li a {
-    color: white;
-    font-size: 15px;
-    display: flex;
-}
-
-.follow {
-    grid-row: 2/-1;
-    grid-column: 6/-1;
-    color: white;
-}
-
-.follow-us {
-    display: flex;
-    gap: 10px;
-}
-
-.social-footer {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 6px;
-    width: 20px;
-    height: 20px;
-    border-radius: 2px;
-    margin-top: 20px;
-}
-
-.logo-superior {
-    grid-column: 10/-1;
-    grid-row: 3/4;
-    margin-left: 10px;
-}
-
-.footer-bg {
+.last-footer-bg {
     background-color: rgb(1, 37, 78);
 }
 
@@ -328,7 +301,6 @@ h2 {
     max-width: 1200px;
     margin: 0 auto;
     color: white;
-    font-size: 12px;
 }
 
 .all {
@@ -340,4 +312,9 @@ h2 {
     background-color: white;
     padding: 5px;
     border-radius: 5px;
+}
+
+.social {
+    justify-content: space-between;
+    height: min-content;
 }
