--- a/style.css
+++ b/style.css
@@ -1,76 +1,310 @@
-.footer{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 0.3fr .5fr 0.5fr;
-    background-color: rgb(3, 70, 146);
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-family: Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+}
+
+.header-container {
+    padding: 34px 0;
+    max-width: 1300px;
     margin: 0 auto;
-    padding: 0 350px;
 }
 
-.logo-footer {
-    margin: 50px 0;
-    grid-row: 1/3;
+.logo img {
+    width: 85px;
 }
 
-.links-footer {
-    display: flex;
-    gap: 50px;
-    margin: 50px 80px;
-    grid-row: 1/5;
+.links a{
+    color: rgb(1, 47, 100);
+    font-size: 14px;
+    font-weight: bold;
 }
 
-.list {
-    width: 80px;
-}
-
-.list li a {
-    color: white;
-    font-size: 15px;
-    display: flex;
-}
-
-.follow {
-    grid-row: 2/-1;
-    grid-column: 6/-1;
-    color: white;
-}
-
-.follow-us {
-    display: flex;
-    gap: 10px;
-}
-
-.social-footer {
-    background-color: white;
+.flex {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 6px;
-    width: 20px;
-    height: 20px;
-    border-radius: 2px;
-    margin-top: 20px;
+    gap: 15px;
 }
 
-.logo-superior {
-    grid-column: 10/-1;
-    grid-row: 3/4;
-    margin-left: 10px;
+.fa-magnifying-glass {
+    margin-right: 5px;
+    color: gray;
+}
+
+.search-text {
+    font-size: 14px;
+    color: gray;
+    font-weight: bold;
+    width: 80px;
+}
+
+.login-btn {
+    background-color: rgb(0, 110, 255);
+    color: white;
+    border: 1px solid black;
+    border-radius: 0.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 0.5rem 1rem;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.gif {
+    width: 100%;
+    height: 560px;
+}
+
+#background-video {
+    width: 100%;
+    height: 560px;
+    object-fit: cover;
+    position: absolute;
+}
+
+.text-main {
+    margin-left: 370px;
+}
+
+.filter {
+    position: relative;
+    width: 100%;
+    height: 560px;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    background: linear-gradient(90deg, #665eff, rgba(0, 0, 0, .3));
+}
+
+.alternate-title {
+    font-size: 50px;
+    color: white;
+}
+
+.subtitle {
+    font-size: 20px;
+}
+
+.main-search {
+    margin: 0 auto;
+    border: 2px solid white;
+    border-radius: 5px;
+    width: 50em;
+    height: 4em;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.main-search .fa-magnifying-glass {
+    color: white;
+}
+
+.main-search input {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    font-size: 20px;
+    padding-left: 20px;
+    width: 100%;
+    outline: none;
+}
+
+input::placeholder {
+    color: white;
+}
+
+.cursos {
+    background-color: white;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 2rem;
+}
+
+h2 {
+    font-size: 38px;
+    color: rgb(120, 122, 138);
+}
+
+.card-group {
+    display: flex;
+    justify-content: center;
+    margin: 0.5rem;
+    gap: 1rem;
+}
+
+.card {
+    padding: 10px 20px;
+    background-color: rgb(209, 133, 33);
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+}
+
+.fast-access {
+    background-color: rgba(151, 155, 189, 0.295);
+    flex-direction: column;
+    padding: 2rem;
+}
+
+.cards {
+    max-width: 1200px;
+    max-height: 12rem;
+    overflow: hidden;
+    flex-wrap: wrap;
+}
+
+.fast-access-cards {
+    background-color: rgb(251, 253, 255);
+    width: 8rem;
+    height: 8rem;
+    border-radius: 0.7rem;
+    font-size: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color: rgb(1, 47, 100);
+    padding: 40px 30px 10px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+    ;
+}
+
+.fast-access-cards .fa-solid {
+    color: rgb(1, 47, 100);
+}
+
+.senac-explore {
+    padding: 3rem;
+}
+
+.title-explore {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 3rem;
+}
+
+.explore-cards {
+    flex-wrap: wrap;
+}
+
+.cards-explore {
+    border-radius: 10px;
+    width: 260px;
+    height: 500px;
+    object-fit: fill;
+    background-size: cover;
+    color: white;
+    display: flex;
+    align-items: space-between;
+    gap: 200px;
+    flex-wrap: wrap;
+    font-weight: bold;
+    padding: 40px;
+}
+
+.logo-explore {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.explore-1 {
+    background-image: url(./img/bolsas.png);
+}
+
+.explore-2 {
+    background-image: url(./img/panelinha.png);
+}
+
+.explore-3 {
+    background-image: url(./img/Explore-Po¿s-graduac¿a¿o.jpg);
+}
+
+.up-content {
+    align-items: flex-start;
+}
+
+.down-content {
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 2rem;
+}
+
+.title-card-explore {
+    font-size: 20px;
+}
+
+.subtitle-card-explore {
+    font-weight: 100;
+}
+
+.main-title-card {
+    font-size: 30px;
+}
+
+.explore-btn {
+    background-color: white;
+    color: rgb(1, 47, 100);
+    width: 150px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.footer-bg {
+    background-color: rgb(0, 48, 104);
+}
+
+.footer {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.all-links {
+    justify-content: space-between;
+    padding-top: 5rem;
+}
+
+.logo-footer {
+    margin: 3rem 0;
+}
+
+.footer-title {
+    color: rgb(180, 180, 180);
+}
+
+.footer-content li {
+    font-weight: bold;
+    margin-top: 0.7rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.last-footer-bg {
+    background-color: rgb(1, 37, 78);
 }
 
 .final-footer{
-    grid-template-columns: repeat(12, 1fr);
-    padding: 0 350px;
+    max-width: 1200px;
     margin: 0 auto;
-    background-color: rgb(1, 37, 78);
     color: white;
-    font-size: 12px;
 }
 
 .all {
-    display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 15px 0;
 }
 
@@ -80,37 +314,7 @@
     border-radius: 5px;
 }
 
-/* ============================== RESPONSIVIDADE ============================== */
-@media (max-width: 1024px) {
-    .main-container {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 0.55fr .25fr .5fr 1.2fr;
-    }
-
-    .header-container {
-        padding: 50px;
-    }
-
-    .cursos {
-        justify-content: center;
-        gap: 2rem;
-    }
-
-    .cards {
-        flex-wrap: wrap;
-    }
-
-    .explore-cards {
-        max-width: 100%;
-        overflow: hidden;
-        flex-wrap: nowrap;
-    }
-
-    .fast-access, footer {
-        max-width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        overflow: hidden;
-    }
+.social {
+    justify-content: space-between;
+    height: min-content;
 }
