--- a/style.css
+++ b/style.css
@@ -11,13 +11,16 @@
     padding: 34px 0;
     max-width: 1300px;
     margin: 0 auto;
+    position: relative;
 }
 
 .logo img {
     width: 85px;
+    max-width: 100%;
+    height: auto;
 }
 
-.links a{
+.links a {
     color: rgb(1, 47, 100);
     font-size: 14px;
     font-weight: bold;
@@ -42,6 +45,10 @@
     width: 80px;
 }
 
+.backpack-icon {
+    display: none;
+}
+
 .login-btn {
     background-color: rgb(0, 110, 255);
     color: white;
@@ -56,9 +63,26 @@
     font-weight: bold;
 }
 
-.gif {
-    width: 100%;
-    height: 560px;
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.bar {
+    height: 3px;
+    width: 25px;
+    background-color: rgb(1, 47, 100);
+    margin: 3px 0;
+}
+
+.nav-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    list-style: none;
 }
 
 #background-video {
@@ -317,4 +341,53 @@ h2 {
 .social {
     justify-content: space-between;
     height: min-content;
+}
+
+@media (max-width: 1200px) {
+    .header-container {
+        justify-content: space-between;
+        padding: 1rem;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    .nav-links {
+        display: none; 
+        flex-direction: column; 
+        width: 100%; 
+        background-color: white; 
+        position: absolute; 
+        top: 100%;
+        left: 0;
+        z-index: 1000; 
+    }
+
+    .nav-links.active {
+        display: flex; 
+    }
+
+    .links a {
+        padding: 10px;
+        text-align: center; 
+    }
+
+    .backpack-icon {
+        display: block;
+    }
+}
+
+@media (max-width: 768px) {
+    .alternate-title {
+        font-size: 2.5em;
+    }
+
+    .subtitle {
+        font-size: 1em;
+    }
+
+    .main-search {
+        width: 90%;
+    }
 }
