--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
 }
 
 .text-main {
-    margin-left: 370px;
+    margin: 0 auto;
 }
 
 .filter {
@@ -291,9 +291,12 @@ h2 {
 .footer {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 1rem;
 }
 
 .all-links {
+    display: flex; 
+    flex-wrap: wrap; 
     justify-content: space-between;
     padding-top: 5rem;
 }
@@ -321,13 +324,15 @@ h2 {
     background-color: rgb(1, 37, 78);
 }
 
-.final-footer{
+.final-footer {
     max-width: 1200px;
     margin: 0 auto;
     color: white;
 }
 
 .all {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 15px 0;
 }
@@ -339,9 +344,13 @@ h2 {
 }
 
 .social {
+    display: flex; 
+    flex-wrap: wrap;
     justify-content: space-between;
     height: min-content;
 }
+
+/* ======================== RESPONSIVIDADE ======================== */
 
 @media (max-width: 1200px) {
     .header-container {
@@ -389,5 +398,52 @@ h2 {
 
     .main-search {
         width: 90%;
+    }
+
+    .all-links {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .card-group {
+        height: fit-content;
+        flex-wrap: wrap;
+    }
+
+    .footer-title {
+        text-align: center;
+    }
+
+    .footer-content li {
+        text-align: center; 
+    }
+
+    .all {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .social {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .logo-footer {
+        margin: 2rem 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        padding: 0.5rem; /* Reduce padding for very small screens */
+    }
+
+    .footer-title {
+        font-size: 1.2rem; /* Adjust font size for smaller screens */
+        text-align: center;
+    }
+
+    .footer-content li {
+        font-size: 0.9rem; /* Adjust font size for smaller screens */
     }
 }
